--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'org.pcap4j:pcap4j-core:1.+'
     compile 'org.pcap4j:pcap4j-packetfactory-static:1.+'
     compile 'javax.jmdns:jmdns:3.4.1'
+    compile 'com.android.support:design:25.3.1'
 }
